<resources>
    <string name="app_name">電大バス時刻表</string>
    <string name="timetable_version">スクールバス時刻表&#160;&#160;：&#160;&#160;平成23年9月16日改定版</string>
    <string name="version">version&#160;&#160;&#160;&#160;α</string>
    <string name="last_update">last&#160;update&#160;:&#160;2012/01/16</string>
    <string name="menu_settings">Settings</string>
    <string name="main_read_button">閲覧</string>
    <string name="main_update_button">更新</string>
    <string name="select_time_spinner">時期</string>
    <string-array name="select_times">
        <item>平日</item>
        <item>土曜日</item>
        <item>平日(休業中)</item>
        <item>土曜日(休業中)</item>
    </string-array>
    <string name="select_area_spinner">区間</string>
    <string-array name="select_areas">
        <item>高坂	→	大学</item>
        <item>大学	→	高坂</item>
        <item>北坂戸	→	大学</item>
        <item>大学	→	北坂戸</item>
        <item>熊谷	→	大学</item>
        <item>大学	→	熊谷</item>
        <item>鴻巣	→	大学</item>
        <item>大学	→	鴻巣</item>
        <item>高崎	→	大学</item>
        <item>大学	→	高崎</item>
    </string-array>
    <string name="select_show_button">表示</string>
    <string name="select_text">見たい時刻表を選択して下さい</string>
    <string-array name="timetable_weekday_from_takasaka">
        <item></item>
        <item>33&#160;&#160;&#160;&#160;
            48&#160;&#160;&#160;&#160;
            50&#160;&#160;&#160;&#160;
            55</item>
        <item>00*&#160;&#160;&#160;
            05*&#160;&#160;&#160;
            10*&#160;&#160;&#160;
            15*&#160;&#160;&#160;
            20*&#160;&#160;&#160;
            25*&#160;&#160;&#160;
            30*&#160;&#160;&#160;
            35&#160;&#160;&#160;&#160;&#160;
            50&#160;&#160;&#160;&#160;&#160;
            59</item>
        <item>04&#160;&#160;&#160;&#160;
            14&#160;&#160;&#160;&#160;
            18&#160;&#160;&#160;&#160;
            25&#160;&#160;&#160;&#160;
            31&#160;&#160;&#160;&#160;
            39&#160;&#160;&#160;&#160;
            42&#160;&#160;&#160;&#160;
            46&#160;&#160;&#160;&#160;
            50&#160;&#160;&#160;&#160;
            54&#160;&#160;&#160;&#160;
            58</item>
        <item>06&#160;&#160;&#160;&#160;
            18&#160;&#160;&#160;&#160;
            30&#160;&#160;&#160;&#160;
            42&#160;&#160;&#160;&#160;
            54</item>
        <item>06&#160;&#160;&#160;&#160;
            18&#160;&#160;&#160;&#160;
            30&#160;&#160;&#160;&#160;
            42&#160;&#160;&#160;&#160;
            54</item>
        <item>06&#160;&#160;&#160;&#160;
            18&#160;&#160;&#160;&#160;
            30&#160;&#160;&#160;&#160;
            42&#160;&#160;&#160;&#160;
            54</item>
        <item>06&#160;&#160;&#160;&#160;
            18&#160;&#160;&#160;&#160;
            30&#160;&#160;&#160;&#160;
            42&#160;&#160;&#160;&#160;
            54</item>
        <item>06&#160;&#160;&#160;&#160;
            18&#160;&#160;&#160;&#160;
            30&#160;&#160;&#160;&#160;
            54</item>
        <item>06&#160;&#160;&#160;&#160;
            18&#160;&#160;&#160;&#160;
            30&#160;&#160;&#160;&#160;
            55</item>
        <item>16&#160;&#160;&#160;&#160;
            24&#160;&#160;&#160;&#160;
            51</item>
        <item>15</item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
    <string-array name="timetable_weekday_to_takasaka">
        <item></item>
        <item></item>
        <item>48</item>
        <item>00&#160;&#160;&#160;&#160;
            12&#160;&#160;&#160;&#160;
            36&#160;&#160;&#160;&#160;
            48</item>
        <item>00&#160;&#160;&#160;&#160;
            12&#160;&#160;&#160;&#160;
            36&#160;&#160;&#160;&#160;
            48</item>
        <item>00&#160;&#160;&#160;&#160;
            12&#160;&#160;&#160;&#160;
            36&#160;&#160;&#160;&#160;
            48</item>
        <item>00&#160;&#160;&#160;&#160;
            12&#160;&#160;&#160;&#160;
            24&#160;&#160;&#160;&#160;
            36&#160;&#160;&#160;&#160;
            48</item>
        <item>00&#160;&#160;&#160;&#160;
            12&#160;&#160;&#160;&#160;
            36&#160;&#160;&#160;&#160;
            48</item>
        <item>00&#160;&#160;&#160;&#160;
            08&#160;&#160;&#160;&#160;
            12&#160;&#160;&#160;&#160;
            24&#160;&#160;&#160;&#160;
            36&#160;&#160;&#160;&#160;
            48</item>
        <item>00&#160;&#160;&#160;&#160;
            12&#160;&#160;&#160;&#160;
            27&#160;&#160;&#160;&#160;
            36&#160;&#160;&#160;&#160;
            45&#160;&#160;&#160;&#160;
            50&#160;&#160;&#160;&#160;
            55</item>
        <item>06&#160;&#160;&#160;&#160;
            14&#160;&#160;&#160;&#160;
            25&#160;&#160;&#160;&#160;
            37&#160;&#160;&#160;&#160;
            41&#160;&#160;&#160;&#160;
            55</item>
        <item>05&#160;&#160;&#160;&#160;
            14&#160;&#160;&#160;&#160;
            25&#160;&#160;&#160;&#160;
            37&#160;&#160;&#160;&#160;
            41&#160;&#160;&#160;&#160;
            54</item>
        <item>04&#160;&#160;&#160;&#160;
            14&#160;&#160;&#160;&#160;
            37&#160;&#160;&#160;&#160;
            54</item>
        <item>09&#160;&#160;&#160;&#160;
            24&#160;&#160;&#160;&#160;
            43</item>            
        <item>02&#160;&#160;&#160;&#160;
            29</item>
    </string-array>
    <string-array name="timetable_saturday_from_takasaka">
        <item></item>
        <item>44</item>
        <item>04&#160;&#160;&#160;&#160;
            10&#160;&#160;&#160;&#160;
            23&#160;&#160;&#160;&#160;
            44&#160;&#160;&#160;&#160;
            56</item>
        <item>10&#160;&#160;&#160;&#160;
            24&#160;&#160;&#160;&#160;
            39</item>
        <item>06&#160;&#160;&#160;&#160;
            30</item>
        <item>06&#160;&#160;&#160;&#160;
            30&#160;&#160;&#160;&#160;
            54</item>
        <item>06&#160;&#160;&#160;&#160;
            30&#160;&#160;&#160;&#160;
            54</item>
        <item>06&#160;&#160;&#160;&#160;
            30</item>
        <item>06&#160;&#160;&#160;&#160;
            30&#160;&#160;&#160;&#160;
            55</item>
        <item>29&#160;&#160;&#160;&#160;
            55</item>
        <item>14&#160;&#160;&#160;&#160;
            44</item>
        <item>14</item>
        <item></item>
        <item></item>            
        <item></item>
    </string-array>
    <string-array name="timetable_saturday_to_takasaka">
        <item></item>
        <item></item>
        <item></item>
        <item>12&#160;&#160;&#160;&#160;
            24&#160;&#160;&#160;&#160;
            48</item>
        <item>12&#160;&#160;&#160;&#160;
            48</item>
        <item>12&#160;&#160;&#160;&#160;
            36&#160;&#160;&#160;&#160;
            48</item>
        <item>12&#160;&#160;&#160;&#160;
            36&#160;&#160;&#160;&#160;
            48</item>
        <item>12&#160;&#160;&#160;&#160;
            48</item>
        <item>12&#160;&#160;&#160;&#160;
            34&#160;&#160;&#160;&#160;
            45</item>
        <item>19&#160;&#160;&#160;&#160;
            45</item>
        <item>04&#160;&#160;&#160;&#160;
            34&#160;&#160;&#160;&#160;
            45</item>
        <item>04&#160;&#160;&#160;&#160;
            34&#160;&#160;&#160;&#160;
            45</item>
        <item>04&#160;&#160;&#160;&#160;
            34</item>
        <item>04&#160;&#160;&#160;&#160;
            35</item>          
        <item>05</item>
    </string-array>
    <string-array name="timetable_vacation_weekday_from_takasaka">
        <item></item>
        <item>48</item>
        <item>03&#160;&#160;&#160;&#160;
            17&#160;&#160;&#160;&#160;
            20&#160;&#160;&#160;&#160;
            34&#160;&#160;&#160;&#160;
            49</item>
        <item>04&#160;&#160;&#160;&#160;
            25&#160;&#160;&#160;&#160;
            39&#160;&#160;&#160;&#160;
            54</item>
        <item>06&#160;&#160;&#160;&#160;
            30&#160;&#160;&#160;&#160;
            54</item>
        <item>06&#160;&#160;&#160;&#160;
            30&#160;&#160;&#160;&#160;
            54</item>
        <item>06&#160;&#160;&#160;&#160;
            30&#160;&#160;&#160;&#160;
            54</item>
        <item>06&#160;&#160;&#160;&#160;
            30</item>
        <item>06&#160;&#160;&#160;&#160;
            30&#160;&#160;&#160;&#160;
            55</item>
        <item>06&#160;&#160;&#160;&#160;
            30&#160;&#160;&#160;&#160;
            54</item>
        <item>16&#160;&#160;&#160;&#160;
            35&#160;&#160;&#160;&#160;
            47</item>
        <item>05</item>
        <item></item>
        <item></item>            
        <item></item>
    </string-array>
    <string-array name="timetable_vacation_weekday_to_takasaka">
        <item></item>
        <item></item>
        <item>48</item>
        <item>12&#160;&#160;&#160;&#160;
            24&#160;&#160;&#160;&#160;
            36&#160;&#160;&#160;&#160;
            48</item>
        <item>12&#160;&#160;&#160;&#160;
            36&#160;&#160;&#160;&#160;
            48</item>
        <item>12&#160;&#160;&#160;&#160;
            36&#160;&#160;&#160;&#160;
            48</item>
        <item>12&#160;&#160;&#160;&#160;
            36&#160;&#160;&#160;&#160;
            48</item>
        <item>12&#160;&#160;&#160;&#160;
            36&#160;&#160;&#160;&#160;
            48</item>
        <item>12&#160;&#160;&#160;&#160;
            36&#160;&#160;&#160;&#160;
            48</item>
        <item>12&#160;&#160;&#160;&#160;
            36&#160;&#160;&#160;&#160;
            55</item>
        <item>06&#160;&#160;&#160;&#160;
            25&#160;&#160;&#160;&#160;
            37&#160;&#160;&#160;&#160;
            55</item>
        <item>05&#160;&#160;&#160;&#160;
            25&#160;&#160;&#160;&#160;
            37&#160;&#160;&#160;&#160;
            54</item>
        <item>04&#160;&#160;&#160;&#160;
            25&#160;&#160;&#160;&#160;
            37&#160;&#160;&#160;&#160;
            54</item>
        <item>09&#160;&#160;&#160;&#160;
            24&#160;&#160;&#160;&#160;
            43</item>            
        <item>02</item>
    </string-array>
    <string-array name="timetable_vacation_saturday_from_takasaka">
        <item></item>
        <item>51</item>
        <item>23&#160;&#160;&#160;&#160;
            56</item>
        <item>24&#160;&#160;&#160;&#160;
            54</item>
        <item>30&#160;&#160;&#160;&#160;
            54</item>
        <item>30&#160;&#160;&#160;&#160;
            54</item>
        <item>30&#160;&#160;&#160;&#160;
            54</item>
        <item>30&#160;&#160;&#160;&#160;
            54</item>
        <item>30&#160;&#160;&#160;&#160;
            54</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>            
        <item></item>
    </string-array>
</resources>